<actions> Add additional legacy macOS build
which users older poppler (21.12.0) and Qt (5.12.12) to target macOS
10.12 and above

--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -102,12 +102,21 @@ ExternalProject_Add(lcms2
 ADD_GH_GROUP(lcms2)
 
 # cairo?
+if (DEFINED ENV{MACOSX_DEPLOYMENT_TARGET} AND $ENV{MACOSX_DEPLOYMENT_TARGET} VERSION_LESS "10.15")
+ExternalProject_Add(poppler
+	URL "https://poppler.freedesktop.org/poppler-21.12.0.tar.xz"
+	URL_HASH SHA256=acb840c2c1ec07d07e53c57c4b3a1ff3e3ee2d888d44e1e9f2f01aaf16814de7
+	CMAKE_ARGS ${CMAKE_ARGS} -DENABLE_BOOST=FALSE -DENABLE_CPP=FALSE -DENABLE_UTILS=FALSE -DENABLE_UNSTABLE_API_ABI_HEADERS=TRUE
+	DEPENDS fontconfig freetype lcms2 libjpeg libopenjpeg libpng libtiff
+)
+else ()
 ExternalProject_Add(poppler
 	URL "https://poppler.freedesktop.org/poppler-22.01.0.tar.xz"
 	URL_HASH SHA256=7d3493056b5b86413e5c693c2cae02c5c06cd8e618d14c2c31e2c84b67b2313e
 	CMAKE_ARGS ${CMAKE_ARGS} -DENABLE_BOOST=FALSE -DENABLE_CPP=FALSE -DENABLE_UTILS=FALSE -DENABLE_UNSTABLE_API_ABI_HEADERS=TRUE
 	DEPENDS fontconfig freetype lcms2 libjpeg libopenjpeg libpng libtiff
 )
+endif ()
 ADD_GH_GROUP(poppler)
 
 ExternalProject_Add(poppler-data
