--- a/.github/actions/package-macos/action.yml
+++ b/.github/actions/package-macos/action.yml
@@ -30,9 +30,9 @@ runs:
       id: info
       shell: bash
       run: |
-        FILENAME=$(find ${{ inputs.builddir }} -depth 1 -name 'TeXworks-macos-*.dmg')
-        VERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-macos-\([^-]*\)-.*\.dmg$/\1/')
-        FULLVERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-macos-\(.*\)\.dmg$/\1/')
+        FILENAME=$(find ${{ inputs.builddir }} -depth 1 -name 'TeXworks-macos*-*.dmg')
+        VERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-macos\([^-]*\)-\([^-]*\)-.*\.dmg$/\2/')
+        FULLVERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-macos\([^-]*\)-\(.*\)\.dmg$/\2/')
         echo "::set-output name=version::${VERSION}"
         echo "::set-output name=fullversion::${FULLVERSION}"
         echo "::set-output name=file::${FILENAME}"
