--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
 
   build-win-msvc:
     name: Windows (MSVC)
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     steps:
     - name: Checkout
@@ -123,6 +123,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        choco uninstall objdump
         cmake -B "${{ runner.workspace }}/tw-deps-build" -S "${{ github.workspace }}/.github/actions/msvc-dependencies" -DCMAKE_INSTALL_PREFIX="${{ runner.workspace }}/tw-deps"
         cmake --build "${{ runner.workspace }}/tw-deps-build" --config Release
 
