--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
 
   build-win-msvc:
     name: Windows (MSVC)
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
     - name: Checkout
