--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -129,9 +129,11 @@ jobs:
             # supported on macOS 10.15 and up
           - macVersion: 10.15
             qtVersion: 6.2.3
+            qtModules: qt5compat
             # Qt 5.12 supports macOS >= 10.12 [https://doc.qt.io/qt-5.12/macos.html]
           - macVersion: 10.12
             qtVersion: 5.12.12
+            qtModules: qtscript
     env:
       MACOSX_DEPLOYMENT_TARGET: ${{ matrix.macVersion }}
 
@@ -143,7 +145,7 @@ jobs:
       uses: jurplel/install-qt-action@v2
       with:
         version: ${{ matrix.qtVersion }}
-        modules: qt5compat
+        modules: ${{ matrix.qtModules }}
 
     - name: Install Homebrew dependencies
       shell: bash
