--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,6 +265,11 @@ if (QT_DEFAULT_MAJOR_VERSION EQUAL 6)
 	  find_package(Qt6WindowsPlatformSupport)
 	  list(APPEND QT_LIBRARIES Qt6::WindowsPlatformSupport)
 	endif ()
+	if (APPLE)
+		find_package(Qt6QCocoaIntegrationPlugin)
+		get_target_property(_plugin_location Qt6::QCocoaIntegrationPlugin LOCATION)
+		list(APPEND QT_PLUGINS _plugin_location)
+	endif ()
 
 	set(QT_VERSION_MAJOR "${Qt6_VERSION_MAJOR}")
 	set(QT_VERSION_MINOR "${Qt6_VERSION_MINOR}")
@@ -444,7 +449,7 @@ ENDIF (WITH_TESTS)
 
 # Gather all libraries related to Qt plugins used by TeXworks so that they can
 # be bundled into packages. (Required on APPLE for a consistent macOS look&feel)
-foreach (_target ${Qt${QT_VERSION_MAJOR}Gui_PLUGINS} ${Qt${QT_VERSION_MAJOR}Widgets_PLUGINS})
+foreach (_target ${Qt5Gui_PLUGINS} ${Qt5Widgets_PLUGINS})
 	get_target_property(_path ${_target} LOCATION_Release)
 	list(APPEND QT_PLUGINS ${_path})
 endforeach()
