--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -149,6 +149,10 @@ jobs:
         version: ${{ matrix.qtVersion }}
         modules: ${{ matrix.qtModules }}
 
+    - name: Debug
+      shell: bash
+      run: find ${QT_PLUGIN_PATH}
+
     - name: Install Homebrew dependencies
       shell: bash
       run: |
