Disable openglrenderer as it does not seem to be available on GH macos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,7 +281,7 @@ if (QT_DEFAULT_MAJOR_VERSION EQUAL 6)
 #		list(APPEND QT_PLUGINS "${QtQCocoa_LIBRARIES}")
 #
 		list(APPEND QT_PLUGINS "${_pluginDir}/platforms/libqcocoa.dylib")
-		list(APPEND QT_PLUGINS "${_pluginDir}/renderers/libopenglrenderer.dylib")
+#		list(APPEND QT_PLUGINS "${_pluginDir}/renderers/libopenglrenderer.dylib")
 		list(APPEND QT_PLUGINS "${_pluginDir}/styles/libqmacstyle.dylib")
 #		list(APPEND QT_PLUGINS "${_pluginDir}/printsupport/libcocoaprintersupport.dylib")
 #		list(APPEND QT_PLUGINS "${_pluginDir}/accessible/libqtaccessiblewidgets.dylib")
