--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,7 +165,10 @@ jobs:
     - name: Debug
       run: |
         env
+        echo "-----------------------------------------------------"
         find /usr/local/Cellar/qt -type d
+        echo "-----------------------------------------------------"
+        find /usr/local/Cellar/qt/6.2.3_1/share/qt/plugins
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DQT_DEFAULT_MAJOR_VERSION=6 -DQT_LIBRARY_DIR=/usr/local/lib
