--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,7 +168,9 @@ jobs:
         echo "-----------------------------------------------------"
         find /usr/local/Cellar/qt -type d
         echo "-----------------------------------------------------"
-        find / -iname '*cocoa*.dylib'
+        find /usr -iname '*cocoa*.dylib'
+        echo "-----------------------------------------------------"
+        find /opt -iname '*cocoa*.dylib'
 #        find /usr/local/Cellar/qt/6.2.3_1/share/qt/plugins
 #        echo "-----------------------------------------------------"
 #        find /usr/local/lib
