--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,8 +271,13 @@ if (QT_DEFAULT_MAJOR_VERSION EQUAL 6)
 			set(_pluginDir "$ENV{QT_PLUGIN_PATH}")
 		else ()
 			get_target_property(_pluginDir Qt6::Widgets LOCATION)
-			get_filename_component(_pluginDir "${_pluginDir}" PATH)
+			message("${_pluginDir}")
+			get_filename_component(_pluginDir "${_pluginDir}" DIRECTORY)
+			message("${_pluginDir}")
 			set(_pluginDir "${_pluginDir}/../plugins")
+			message("${_pluginDir}")
+			get_filename_component(_pluginDir "${_pluginDir} REALPATH)
+			message("${_pluginDir}")
 		endif ()
 
 		message("_pluginDir = ${_pluginDir}")
