Try to fix finding plugin dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,12 +272,17 @@ if (QT_DEFAULT_MAJOR_VERSION EQUAL 6)
 		else ()
 			get_target_property(_pluginDir Qt6::Widgets LOCATION)
 			message("${_pluginDir}")
+			get_filename_component(_pluginDir "${_pluginDir}" REALPATH)
+			message("${_pluginDir}")
 			get_filename_component(_pluginDir "${_pluginDir}" DIRECTORY)
 			message("${_pluginDir}")
-			set(_pluginDir "${_pluginDir}/../plugins")
+			set(_pluginDir "${_pluginDir}/../../../../share/qt/plugins")
 			message("${_pluginDir}")
 			get_filename_component(_pluginDir "${_pluginDir}" REALPATH)
 			message("${_pluginDir}")
+
+			file(GLOB _tmp "${_pluginDir}/*")
+			message("${_tmp}")
 		endif ()
 
 		message("_pluginDir = ${_pluginDir}")
