--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -267,8 +267,8 @@ if (QT_DEFAULT_MAJOR_VERSION EQUAL 6)
 	endif ()
 	if (APPLE)
 #		# Inspired by https://github.com/MaximAlien/macdeployqt/blob/bc9c0ba199f323a42e3f1cc04d4b66e3e59ac995/macdeployqt/shared.cpp
-		if (DEFINED ENV{QT_PLUGIN_PATH})
-			set(_pluginDir "$ENV{QT_PLUGIN_PATH}")
+		if (QT_PLUGIN_PATH)
+			set(_pluginDir "${QT_PLUGIN_PATH}")
 		else ()
 			get_target_property(_pluginDir Qt6::Widgets LOCATION)
 			message("${_pluginDir}")
