Try to find QT5_DIR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,12 +162,14 @@ jobs:
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install hunspell poppler-qt5 lua qt@5
         
+        ls -lisa /usr/local/opt/qt5
+        
         find /usr/local
         
         brew link --force poppler-qt5 qt@5
 
     - name: Configure
-      run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DQT_LIBRARY_DIR=/usr/local/lib
+      run: QT5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5/ cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DQT_LIBRARY_DIR=/usr/local/lib
 
     - name: Build
       run: make -j
