--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,12 +162,13 @@ jobs:
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install hunspell poppler-qt5 lua qt@5
         
-        ls -lisa /usr/local/opt/qt5
+        #ls -lisa /usr/local/opt/qt5
         
         #find /usr/local
-        find /usr/local/opt/qt5/
+        #find /usr/local/opt/qt5/
         
         #brew link --force poppler-qt5 qt@5
+        brew link --force poppler-qt5
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
