--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -194,10 +194,10 @@ jobs:
       run: |
         otool -L build/test_poppler-qt6
         otool -L ${RUNNER_TEMP}/tw-deps/lib/libpoppler.dylib
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-      with:
-        limit-access-to-actor: true
+#    - name: Setup tmate session
+#      uses: mxschmitt/action-tmate@v3
+#      with:
+#        limit-access-to-actor: true
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
