--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -192,7 +192,7 @@ jobs:
 
     - name: Debug
       run: |
-        otool -L build/test_poppler-qt6
+        otool -L build/test_poppler-qt*
         otool -L ${RUNNER_TEMP}/tw-deps/lib/libpoppler.dylib
 #    - name: Setup tmate session
 #      uses: mxschmitt/action-tmate@v3
@@ -205,7 +205,7 @@ jobs:
         name: TeXworks-macOS
         path: |
           ${{ steps.package.outputs.file }}
-          build/test_poppler-qt6
+          build/test_poppler-qt*
 
 #    - name: Deploy to Artifactory
 #      if: github.event_name == 'push'
