try to package test_poppler

--- a/modules/QtPDF/CMakeLists.txt
+++ b/modules/QtPDF/CMakeLists.txt
@@ -449,6 +449,10 @@ IF ( WITH_TESTS )
       ${QTPDFTEST_SRCS}
       ${QTPDFTEST_HDRS}
     )
+INSTALL(TARGETS test_poppler-qt${QT_VERSION_MAJOR}
+RUNTIME DESTINATION bin COMPONENT
+BUNDLE DESTINATION . COMPONENT
+)
     SET_TARGET_PROPERTIES(test_poppler-qt${QT_VERSION_MAJOR} PROPERTIES
       COMPILE_FLAGS "-DUSE_POPPLERQT ${Qt${QT_VERSION_MAJOR}Widgets_EXECUTABLE_COMPILE_FLAGS}"
     )
