--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -130,12 +130,12 @@ jobs:
           - macVersion: 10.15
             qtVersionMajor: 6
             qtVersion: 6.2.3
-            qtModules: qt5compat
+            qtModules: qtimageformats qt5compat
             # Qt 5.12 supports macOS >= 10.12 [https://doc.qt.io/qt-5.12/macos.html]
           - macVersion: 10.12
             qtVersionMajor: 5
             qtVersion: 5.12.12
-            qtModules: qtscript
+            qtModules: qtimageformats qtscript
     env:
       MACOSX_DEPLOYMENT_TARGET: ${{ matrix.macVersion }}
 
