Qt plugin debug

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -153,6 +153,9 @@ jobs:
         version: ${{ matrix.qtVersion }}
         modules: ${{ matrix.qtModules }}
 
+    - name: Qt plugin debug
+      run: find ${QT_PLUGIN_PATH}
+
     - name: Install Homebrew dependencies
       shell: bash
       run: |
