--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -120,6 +120,7 @@ jobs:
     name: Mac OS X
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         macVersion: [10.15, 10.12]
         include:
