Try to fix path to poppler.patch

--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -111,7 +111,6 @@ ExternalProject_Add(poppler
 	URL_HASH SHA256=acb840c2c1ec07d07e53c57c4b3a1ff3e3ee2d888d44e1e9f2f01aaf16814de7
 	CMAKE_ARGS ${CMAKE_ARGS} -DENABLE_BOOST=FALSE -DENABLE_CPP=FALSE -DENABLE_GLIB=FALSE -DENABLE_UTILS=FALSE -DENABLE_UNSTABLE_API_ABI_HEADERS=TRUE
 	DEPENDS fontconfig freetype lcms2 libjpeg libopenjpeg libpng libtiff
-	PATCH_COMMAND patch -p1 < "${CMAKE_CURRENT_SOUCE_DIR}/poppler.patch"
 )
 else ()
 ExternalProject_Add(poppler
@@ -119,6 +118,7 @@ ExternalProject_Add(poppler
 	URL_HASH SHA256=e390c8b806f6c9f0e35c8462033e0a738bb2460ebd660bdb8b6dca01556193e1
 	CMAKE_ARGS ${CMAKE_ARGS} -DENABLE_BOOST=FALSE -DENABLE_CPP=FALSE -DENABLE_GLIB=FALSE -DENABLE_UTILS=FALSE -DENABLE_UNSTABLE_API_ABI_HEADERS=TRUE
 	DEPENDS fontconfig freetype lcms2 libjpeg libopenjpeg libpng libtiff
+	PATCH_COMMAND patch -p1 < "$ENV{GITHUB_WORKSPACE}/.github/actions/setup-macos/poppler.patch"
 )
 endif ()
 ADD_GH_GROUP(poppler)
