--- a/.github/workflows/Dockerfile.arch-qt6
+++ b/.github/workflows/Dockerfile.arch-qt6
@@ -26,5 +26,5 @@ COPY . /home/tw
 
 RUN mkdir /home/tw/build && cd /home/tw/build && \
 cmake -DQT_DEFAULT_MAJOR_VERSION=6 .. && \
-make -j3 && \
+make && \
 xvfb-run ctest -V
