--- a/.github/actions/package-windows/action.yml
+++ b/.github/actions/package-windows/action.yml
@@ -38,6 +38,6 @@ runs:
         md5sum "$FILENAME"
         echo "SHA256"
         sha256sum "$FILENAME"
-        echo "version=${VERSION}" >> $GITHUB_OUTPUT
-        echo "fullversion=${FULLVERSION}" >> $GITHUB_OUTPUT
-        echo "file=${FILENAME}" >> $GITHUB_OUTPUT
+        echo "version=${VERSION}" >> "${{ env.GITHUB_OUTPUT }}"
+        echo "fullversion=${FULLVERSION}" >> "${{ env.GITHUB_OUTPUT }}"
+        echo "file=${FILENAME}" >> "${{ env.GITHUB_OUTPUT }}"
