--- a/.github/actions/package-windows/action.yml
+++ b/.github/actions/package-windows/action.yml
@@ -39,6 +39,8 @@ runs:
         md5sum "$FILENAME"
         echo "SHA256"
         sha256sum "$FILENAME"
-        echo "version=${VERSION}" >> "${{ env.GITHUB_OUTPUT }}"
-        echo "fullversion=${FULLVERSION}" >> "${{ env.GITHUB_OUTPUT }}"
-        echo "file=${FILENAME}" >> "${{ env.GITHUB_OUTPUT }}"
+        echo "$GITHUB_OUTPUT"
+        ls -lisa "$GITHUB_OUTPUT"
+        echo "version=${VERSION}" >> "${GITHUB_OUTPUT}"
+        echo "fullversion=${FULLVERSION}" >> "${GITHUB_OUTPUT}"
+        echo "file=${FILENAME}" >> "${GITHUB_OUTPUT}"
