--- a/plugins-src/TWLuaPlugin/CMakeLists.txt
+++ b/plugins-src/TWLuaPlugin/CMakeLists.txt
@@ -8,7 +8,7 @@ ENDIF()
 
 if (BUILD_SHARED_PLUGINS)
   # For shared builds, we pull in scripting/Script.cpp so all references can be resolved
-  set(TWSCRIPT_SRC "../../src/scripting/Script.cpp")
+  #  set(TWSCRIPT_SRC "../../src/scripting/Script.cpp")
 else ()
   # For static builds, scripting/Script.cpp is already included in the main app, so we
   # don't pull it in here to avoid multiple definitions of the Qt metaobject
