More debug output

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -85,10 +85,20 @@ jobs:
       run: |
         ldd /usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/bin/lrelease
 
+    - name: Test 3a
+      shell: wsl-bash {0}
+      run: |
+        readelf -d /usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/bin/lrelease
+
     - name: Test 4
       shell: wsl-bash {0}
       run: |
         find /usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/
+
+    - name: Test 5
+      shell: wsl-bash {0}
+      run: |
+        ldd /usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/lib/libQt6Core.so
 
     - name: Configure
       shell: wsl-bash {0}
